RESOLVED FIXED187546
Shrink CachedResource and subclasses
https://bugs.webkit.org/show_bug.cgi?id=187546
Summary Shrink CachedResource and subclasses
Simon Fraser (smfr)
Reported 2018-07-10 21:37:12 PDT
Shrink CachedResource and subclasses
Attachments
Patch (17.66 KB, patch)
2018-07-10 21:40 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2018-07-10 21:40:41 PDT
EWS Watchlist
Comment 2 2018-07-10 21:42:13 PDT
Attachment 344749 [details] did not pass style-queue: ERROR: Source/WebCore/platform/network/ResourceRequestBase.h:167: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3 2018-07-13 20:42:04 PDT
I can haz review?
Daniel Bates
Comment 4 2018-07-14 05:42:40 PDT
Comment on attachment 344749 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=344749&action=review > Source/WebCore/loader/cache/CachedResource.h:335 > + CachedResourceLoader* m_owningCachedResourceLoader { nullptr }; // only non-null for resources that are not in the cache Please make the comment a proper sentence. > Source/WebCore/platform/network/NetworkLoadMetrics.h:42 > +enum class NetworkLoadPriority : uint8_t { I take it the compiler is not smart enough to store these in a uint8_t without the annotation. Is this a bug in clang? > Source/WebCore/platform/network/ResourceRequestBase.h:86 > + enum class SameSiteDisposition : uint8_t { Unspecified, SameSite, CrossSite }; Ditto. > Source/WebCore/platform/network/ResourceRequestBase.h:167 > + enum class Requester : uint8_t { Unspecified, Main, XHR, Fetch, Media, ImportScripts }; Ditto.
Chris Dumez
Comment 5 2018-07-14 08:21:42 PDT
Comment on attachment 344749 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=344749&action=review >> Source/WebCore/platform/network/NetworkLoadMetrics.h:42 >> +enum class NetworkLoadPriority : uint8_t { > > I take it the compiler is not smart enough to store these in a uint8_t without the annotation. Is this a bug in clang? Not a bug, default underlying type is int as per https://isocpp.org/wiki/faq/cpp11-language-types#enum-class
WebKit Commit Bot
Comment 6 2018-07-14 19:13:47 PDT
Comment on attachment 344749 [details] Patch Clearing flags on attachment: 344749 Committed r233839: <https://trac.webkit.org/changeset/233839>
WebKit Commit Bot
Comment 7 2018-07-14 19:13:48 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2018-07-14 19:14:20 PDT
Note You need to log in before you can comment on or make changes to this bug.