Shrink CachedResource and subclasses https://bugs.webkit.org/show_bug.cgi?id=187546

Reviewed by Daniel Bates.

Shrink CachedResource down from 1384 to 1336 bytes, CachedImage from 1480 to
1424 bytes, and CachedFont a little.

This saves about 23KB on cnn.com.

* loader/ResourceLoaderOptions.h:
* loader/cache/CachedFont.h:
* loader/cache/CachedImage.h:
* loader/cache/CachedResource.cpp:
(WebCore::CachedResource::CachedResource):
* loader/cache/CachedResource.h:
* platform/network/CacheValidation.h:
(WebCore::RedirectChainCacheStatus::RedirectChainCacheStatus):
* platform/network/NetworkLoadMetrics.h:
* platform/network/ParsedContentRange.h:
* platform/network/ResourceRequestBase.h:
* platform/network/ResourceResponseBase.h:


Canonical link: https://commits.webkit.org/202888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233839 268f45cc-cd09-0410-ab3c-d52691b4dbfc